--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,45 +8,47 @@ orbs:
 jobs:
   build:
     docker:
-      - image: cimg/ruby-node:3.0.1
+      - image: cimg/ruby:3.0.3
     steps:
       - checkout
       - ruby/install-deps
       # Store bundle cache
-      - node/install-packages:
-         pkg-manager: yarn
-         cache-key: "yarn.lock"
+      # - node/install-packages:
+      #    pkg-manager: yarn
+      #    cache-key: "yarn.lock"
   test:
     parallelism: 3
     docker:
-      - image: cimg/ruby-node:3.0.1
+      - image: cimg/ruby:3.0.3
       - image: cimg/postgres:14.2
         environment:
-          POSTGRES_USER: anity_jobs
+          POSTGRES_USER: postgres
           POSTGRES_DB: anity_jobs_test
-          POSTGRES_PASSWORD: ""
+          POSTGRES_PASSWORD: "password"
     environment:
       BUNDLE_JOBS: "3"
       BUNDLE_RETRY: "3"
       PGHOST: 127.0.0.1
-      PGUSER: anity_jobs
-      PGPASSWORD: ""
+      PGUSER: postgres
+      PGPASSWORD: "password"
       RAILS_ENV: test
     steps:
       - checkout
       - ruby/install-deps
-      - node/install-packages:
-         pkg-manager: yarn
-         cache-key: "yarn.lock"
+      # - node/install-packages:
+      #    pkg-manager: yarn
+      #    cache-key: "yarn.lock"
       - run:
           name: Wait for DB
           command: dockerize -wait tcp://localhost:5432 -timeout 1m
       - run:
-          name: Database setup
-          command: bundle exec rails db:schema:load --trace
-      # Run rspec in parallel
-      - ruby/rspec-test
-      #- ruby/rubocop-check
+          name: Database Setup
+          command: |
+            bundle exec rake db:create
+            bundle exec rake db:test:load
+      - run:
+          name: Parallel RSpec
+          command: bin/rake spec
       # - run:
       #     name: Run standardrb check
       #     command: bundle exec standardrb --format progress
