Fix sidekiq error

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -1,5 +1,5 @@
 :schedule:
   job_views:
     cron: "* * * * *"
-    class: "JobTrackerScheduler"
+    class: "TrackerTimeScheduler"
     queue: "default"
