Delete all old jobs after 3 moths in the app

--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,8 @@ default: &default
 development:
   <<: *default
   database: Anity_Jobs_development
+  username: postgres
+  password: alfred
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -57,6 +59,8 @@ development:
 test:
   <<: *default
   database: Anity_Jobs_test
+  username: postgres
+  password: alfred
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
